5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1636_2449.log
== TEST (2019-04-13 20:54:00) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x == y) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x == y) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:54:20) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x = y) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x = y) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:54:34) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x,y) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x,y) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:54:59) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
X = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
Y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (X==Y	) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (X==Y	) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:55:06) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
X = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
Y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (X == Y	) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (X == Y	) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:55:14) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
X = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
Y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (X == Y) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (X == Y) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:17) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
var1 = x,y
else (var1) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (var1) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:27) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
var1 = x,y
else ( var1 ) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else ( var1 ) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:29) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
var1 = x,y
else ( var1 ) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else ( var1 ) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:42) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
var1 = x,y
else (var1) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (var1) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:44) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
var1 = x,y
else (var1) :
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 10
    else (var1) :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:56:59) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:01) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:01) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:01) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:02) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:02) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:02) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 20:57:03) 
-- CODE:
var1 = float(input("a"))
var2 = float(input("b"))
var3 = float(input("c"))
var4 = float(input("d"))
var5 = float(input("e"))
var6 = float(input("f"))
x = (var3 * var5) - (var2 * var5) / (var1 * var5) - (var2 * var4)
y = (var1 * var6) - (var3 * var4) / (var1 * var5) - (var2 * var4)
else (x):
	mensagem = "tem solucao"
else :
	mensagem = "nao tem solucao"
print(mensagem)
-- ERROR:
File "XXXX", line 9
    else (x):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
